--- a/package.json
+++ b/package.json
@@ -1,15 +1,26 @@
 {
-  "name": "mvc_design",
+  "name": "eat-the-burger",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
+    "dev": "nodemon server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kaitlinkenney/eat-the-burger.git"
+  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/kaitlinkenney/eat-the-burger/issues"
+  },
+  "homepage": "https://github.com/kaitlinkenney/eat-the-burger#readme",
   "dependencies": {
-    "express": "^4.16.3",
-    "mysql": "^2.16.0"
+    "express": "^4.17.1",
+    "mysql": "^2.18.1"
   }
 }
